--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,8 @@ feed:
 
 remote_theme: daviddarnes/garth
 
+google_analytics: UA—91867404-3
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
