--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ feed:
 
 remote_theme: daviddarnes/garth
 
-google_analytics: UA—91867404-3
+google_analytics: UA-91867404-2
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
